--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,16 @@
   },
   "homepage": "https://github.com/JamesKim1227/simple-forum#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "helmet": "^5.0.2",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.3",
+    "sequelize": "^6.16.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
